Added uploadBlock component

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5347,3 +5347,9 @@ h1.blog_title {
     padding: 10px 30px !important;
     height: auto !important;
 }
+
+
+.ant-checkbox-group {
+    display: flex;
+    flex-direction: column;
+}
