--- a/src/styles/redgroup.less
+++ b/src/styles/redgroup.less
@@ -1,6 +1,7 @@
 @primary-color: #D8002C; // 全局主色
 @link-color: #4d8200; // 链接色
 @success-color: #52c41a; // 成功色
+@yellow-base: #D8002C;
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
 @font-size-base: 14px; // 主字号
