--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2530,6 +2530,7 @@ ul {
 }
 
 .main-search-tabs {
+    box-shadow: 0px 3px 15px rgba(166, 166, 166, 0.1);
 
 }
 
@@ -5343,6 +5344,10 @@ h1.blog_title {
     border-bottom: 5px solid #eee !important;
 }
 
+.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before {
+    border-bottom: 0px solid #f0f0f0 !important;
+}
+
 .ant-tabs-tab + .ant-tabs-tab {
     margin: 0 0 0 0px !important;
     padding-right:30px !important;
@@ -5422,6 +5427,10 @@ h1.blog_title {
 .add_property_wrapper .ant-upload.ant-upload-select-picture-card {
     background-color: transparent;
     border: 0px dashed #d9d9d9;
+}
+
+.ant-steps-vertical > .ant-steps-item .ant-steps-item-title {
+    line-height: 48px !important;
 }
 
 
