--- a/src/styles/red_theme.css
+++ b/src/styles/red_theme.css
@@ -669,6 +669,8 @@ html {
 }
 .ant-slide-up-enter,
 .ant-slide-up-appear {
+  transform: scale(0);
+  transform-origin: 0% 0%;
   opacity: 0;
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -698,6 +700,8 @@ html {
 }
 .ant-slide-down-enter,
 .ant-slide-down-appear {
+  transform: scale(0);
+  transform-origin: 0% 0%;
   opacity: 0;
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -727,6 +731,8 @@ html {
 }
 .ant-slide-left-enter,
 .ant-slide-left-appear {
+  transform: scale(0);
+  transform-origin: 0% 0%;
   opacity: 0;
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -756,6 +762,8 @@ html {
 }
 .ant-slide-right-enter,
 .ant-slide-right-appear {
+  transform: scale(0);
+  transform-origin: 0% 0%;
   opacity: 0;
   animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -4074,19 +4082,19 @@ a.ant-btn-sm {
 .ant-btn-compact-item:not(.ant-btn-compact-first-item):not(.ant-btn-compact-last-item).ant-btn {
   border-radius: 0;
 }
-.ant-btn-compact-item.ant-btn.ant-btn-compact-first-item:not(.ant-btn-compact-item-rtl) {
+.ant-btn-compact-item.ant-btn.ant-btn-compact-first-item:not(.ant-btn-compact-last-item):not(.ant-btn-compact-item-rtl) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-btn-compact-item.ant-btn.ant-btn-compact-last-item:not(.ant-btn-compact-item-rtl) {
+.ant-btn-compact-item.ant-btn.ant-btn-compact-last-item:not(.ant-btn-compact-first-item):not(.ant-btn-compact-item-rtl) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-btn-compact-item.ant-btn.ant-btn-compact-item-rtl.ant-btn-compact-first-item {
+.ant-btn-compact-item.ant-btn.ant-btn-compact-item-rtl.ant-btn-compact-first-item:not(.ant-btn-compact-last-item) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-btn-compact-item.ant-btn.ant-btn-compact-item-rtl.ant-btn-compact-last-item {
+.ant-btn-compact-item.ant-btn.ant-btn-compact-item-rtl.ant-btn-compact-last-item:not(.ant-btn-compact-first-item) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -4139,11 +4147,11 @@ a.ant-btn-sm {
 .ant-btn-compact-vertical-item:not(.ant-btn-compact-vertical-first-item):not(.ant-btn-compact-vertical-last-item) {
   border-radius: 0;
 }
-.ant-btn-compact-vertical-item.ant-btn-compact-vertical-first-item {
+.ant-btn-compact-vertical-item.ant-btn-compact-vertical-first-item:not(.ant-btn-compact-vertical-last-item) {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-btn-compact-vertical-item.ant-btn-compact-vertical-last-item {
+.ant-btn-compact-vertical-item.ant-btn-compact-vertical-last-item:not(.ant-btn-compact-vertical-first-item) {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
@@ -4620,6 +4628,7 @@ a.ant-btn-sm {
   padding-left: 16px;
 }
 .ant-card-meta-detail {
+  flex: 1;
   overflow: hidden;
 }
 .ant-card-meta-detail > div:not(:last-child) {
@@ -5254,19 +5263,19 @@ a.ant-btn-sm {
 .ant-cascader-compact-item:not(.ant-cascader-compact-first-item):not(.ant-cascader-compact-last-item).ant-cascader {
   border-radius: 0;
 }
-.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-first-item:not(.ant-cascader-compact-item-rtl) {
+.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-first-item:not(.ant-cascader-compact-last-item):not(.ant-cascader-compact-item-rtl) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-last-item:not(.ant-cascader-compact-item-rtl) {
+.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-last-item:not(.ant-cascader-compact-first-item):not(.ant-cascader-compact-item-rtl) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-item-rtl.ant-cascader-compact-first-item {
+.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-item-rtl.ant-cascader-compact-first-item:not(.ant-cascader-compact-last-item) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-item-rtl.ant-cascader-compact-last-item {
+.ant-cascader-compact-item.ant-cascader.ant-cascader-compact-item-rtl.ant-cascader-compact-last-item:not(.ant-cascader-compact-first-item) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -6209,19 +6218,19 @@ textarea.ant-picker-input > input {
 .ant-picker-compact-item:not(.ant-picker-compact-first-item):not(.ant-picker-compact-last-item).ant-picker {
   border-radius: 0;
 }
-.ant-picker-compact-item.ant-picker.ant-picker-compact-first-item:not(.ant-picker-compact-item-rtl) {
+.ant-picker-compact-item.ant-picker.ant-picker-compact-first-item:not(.ant-picker-compact-last-item):not(.ant-picker-compact-item-rtl) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-picker-compact-item.ant-picker.ant-picker-compact-last-item:not(.ant-picker-compact-item-rtl) {
+.ant-picker-compact-item.ant-picker.ant-picker-compact-last-item:not(.ant-picker-compact-first-item):not(.ant-picker-compact-item-rtl) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-picker-compact-item.ant-picker.ant-picker-compact-item-rtl.ant-picker-compact-first-item {
+.ant-picker-compact-item.ant-picker.ant-picker-compact-item-rtl.ant-picker-compact-first-item:not(.ant-picker-compact-last-item) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-picker-compact-item.ant-picker.ant-picker-compact-item-rtl.ant-picker-compact-last-item {
+.ant-picker-compact-item.ant-picker.ant-picker-compact-item-rtl.ant-picker-compact-last-item:not(.ant-picker-compact-first-item) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -7026,6 +7035,7 @@ _:-ms-fullscreen .ant-picker-range-wrapper .ant-picker-year-panel .ant-picker-ce
 }
 .ant-divider-horizontal.ant-divider-with-text {
   display: flex;
+  align-items: center;
   margin: 16px 0;
   color: rgba(0, 0, 0, 0.85);
   font-weight: 500;
@@ -7038,7 +7048,6 @@ _:-ms-fullscreen .ant-picker-range-wrapper .ant-picker-year-panel .ant-picker-ce
 .ant-divider-horizontal.ant-divider-with-text::before,
 .ant-divider-horizontal.ant-divider-with-text::after {
   position: relative;
-  top: 50%;
   width: 50%;
   border-top: 1px solid transparent;
   border-top-color: inherit;
@@ -7047,19 +7056,15 @@ _:-ms-fullscreen .ant-picker-range-wrapper .ant-picker-year-panel .ant-picker-ce
   content: '';
 }
 .ant-divider-horizontal.ant-divider-with-text-left::before {
-  top: 50%;
   width: 5%;
 }
 .ant-divider-horizontal.ant-divider-with-text-left::after {
-  top: 50%;
   width: 95%;
 }
 .ant-divider-horizontal.ant-divider-with-text-right::before {
-  top: 50%;
   width: 95%;
 }
 .ant-divider-horizontal.ant-divider-with-text-right::after {
-  top: 50%;
   width: 5%;
 }
 .ant-divider-inner-text {
@@ -7579,19 +7584,25 @@ _:-ms-fullscreen .ant-picker-range-wrapper .ant-picker-year-panel .ant-picker-ce
 .ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-active {
   background-color: #f5f5f5;
 }
-.ant-dropdown-menu-item-disabled,
-.ant-dropdown-menu-submenu-title-disabled {
+.ant-dropdown-menu-item.ant-dropdown-menu-item-disabled,
+.ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-disabled,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-disabled,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-disabled {
   color: rgba(0, 0, 0, 0.25);
   cursor: not-allowed;
 }
-.ant-dropdown-menu-item-disabled:hover,
-.ant-dropdown-menu-submenu-title-disabled:hover {
+.ant-dropdown-menu-item.ant-dropdown-menu-item-disabled:hover,
+.ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-disabled:hover,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-disabled:hover,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-disabled:hover {
   color: rgba(0, 0, 0, 0.25);
   background-color: #fff;
   cursor: not-allowed;
 }
-.ant-dropdown-menu-item-disabled a,
-.ant-dropdown-menu-submenu-title-disabled a {
+.ant-dropdown-menu-item.ant-dropdown-menu-item-disabled a,
+.ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-disabled a,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-disabled a,
+.ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-disabled a {
   pointer-events: none;
 }
 .ant-dropdown-menu-item-divider,
@@ -13921,7 +13932,7 @@ textarea.ant-input-affix-wrapper {
   z-index: 1;
 }
 .ant-input-affix-wrapper-disabled .ant-input[disabled] {
-  background: transparent;
+  background: rgba(255, 255, 255, 0);
 }
 .ant-input-affix-wrapper > .ant-input {
   font-size: inherit;
@@ -14567,19 +14578,19 @@ textarea.ant-input {
 .ant-input-compact-item:not(.ant-input-compact-first-item):not(.ant-input-compact-last-item).ant-input {
   border-radius: 0;
 }
-.ant-input-compact-item.ant-input.ant-input-compact-first-item:not(.ant-input-compact-item-rtl) {
+.ant-input-compact-item.ant-input.ant-input-compact-first-item:not(.ant-input-compact-last-item):not(.ant-input-compact-item-rtl) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-input-compact-item.ant-input.ant-input-compact-last-item:not(.ant-input-compact-item-rtl) {
+.ant-input-compact-item.ant-input.ant-input-compact-last-item:not(.ant-input-compact-first-item):not(.ant-input-compact-item-rtl) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-input-compact-item.ant-input.ant-input-compact-item-rtl.ant-input-compact-first-item {
+.ant-input-compact-item.ant-input.ant-input-compact-item-rtl.ant-input-compact-first-item:not(.ant-input-compact-last-item) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-input-compact-item.ant-input.ant-input-compact-item-rtl.ant-input-compact-last-item {
+.ant-input-compact-item.ant-input.ant-input-compact-item-rtl.ant-input-compact-last-item:not(.ant-input-compact-first-item) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -15618,19 +15629,19 @@ textarea.ant-input-number {
 .ant-input-number-compact-item:not(.ant-input-number-compact-first-item):not(.ant-input-number-compact-last-item).ant-input-number {
   border-radius: 0;
 }
-.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-first-item:not(.ant-input-number-compact-item-rtl) {
+.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-first-item:not(.ant-input-number-compact-last-item):not(.ant-input-number-compact-item-rtl) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-last-item:not(.ant-input-number-compact-item-rtl) {
+.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-last-item:not(.ant-input-number-compact-first-item):not(.ant-input-number-compact-item-rtl) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-item-rtl.ant-input-number-compact-first-item {
+.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-item-rtl.ant-input-number-compact-first-item:not(.ant-input-number-compact-last-item) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-item-rtl.ant-input-number-compact-last-item {
+.ant-input-number-compact-item.ant-input-number.ant-input-number-compact-item-rtl.ant-input-number-compact-last-item:not(.ant-input-number-compact-first-item) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -17016,6 +17027,7 @@ textarea.ant-mentions {
 .ant-menu-item-disabled a,
 .ant-menu-submenu-disabled a {
   color: rgba(0, 0, 0, 0.25) !important;
+  pointer-events: none;
 }
 .ant-menu-item-disabled > .ant-menu-submenu-title,
 .ant-menu-submenu-disabled > .ant-menu-submenu-title {
@@ -18652,7 +18664,6 @@ textarea.ant-pagination-options-quick-jumper input {
 }
 .ant-popover-message {
   display: flex;
-  align-items: center;
   padding: 4px 0 12px;
   color: rgba(0, 0, 0, 0.65);
   font-size: 14px;
@@ -20349,19 +20360,19 @@ span.ant-radio + * {
 .ant-select-compact-item:not(.ant-select-compact-first-item):not(.ant-select-compact-last-item).ant-select > .ant-select-selector {
   border-radius: 0;
 }
-.ant-select-compact-item.ant-select-compact-first-item.ant-select:not(.ant-select-compact-item-rtl) > .ant-select-selector {
+.ant-select-compact-item.ant-select-compact-first-item.ant-select:not(.ant-select-compact-last-item):not(.ant-select-compact-item-rtl) > .ant-select-selector {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
-.ant-select-compact-item.ant-select-compact-last-item.ant-select:not(.ant-select-compact-item-rtl) > .ant-select-selector {
+.ant-select-compact-item.ant-select-compact-last-item.ant-select:not(.ant-select-compact-first-item):not(.ant-select-compact-item-rtl) > .ant-select-selector {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-select-compact-item.ant-select.ant-select-compact-first-item.ant-select-compact-item-rtl > .ant-select-selector {
+.ant-select-compact-item.ant-select.ant-select-compact-first-item.ant-select-compact-item-rtl:not(.ant-select-compact-last-item) > .ant-select-selector {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
-.ant-select-compact-item.ant-select.ant-select-compact-last-item.ant-select-compact-item-rtl > .ant-select-selector {
+.ant-select-compact-item.ant-select.ant-select-compact-last-item.ant-select-compact-item-rtl:not(.ant-select-compact-first-item) > .ant-select-selector {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -21511,7 +21522,7 @@ span.ant-radio + * {
 .ant-steps-vertical > .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
   position: absolute;
   top: 0;
-  left: 16px;
+  left: 15px;
   width: 1px;
   height: 100%;
   padding: 38px 0 6px;
@@ -21529,7 +21540,7 @@ span.ant-radio + * {
 .ant-steps-vertical.ant-steps-small .ant-steps-item-container .ant-steps-item-tail {
   position: absolute;
   top: 0;
-  left: 12px;
+  left: 11px;
   padding: 30px 0 6px;
 }
 .ant-steps-vertical.ant-steps-small .ant-steps-item-container .ant-steps-item-title {
@@ -21900,6 +21911,15 @@ span.ant-radio + * {
   right: -2px;
   left: auto;
 }
+.ant-steps-rtl.ant-steps-with-progress.ant-steps-vertical > .ant-steps-item {
+  padding-right: 4px;
+}
+.ant-steps-rtl.ant-steps-with-progress.ant-steps-vertical > .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
+  right: 19px;
+}
+.ant-steps-rtl.ant-steps-with-progress.ant-steps-small.ant-steps-vertical > .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
+  right: 15px;
+}
 .ant-steps-rtl.ant-steps-with-progress.ant-steps-horizontal.ant-steps-label-horizontal .ant-steps-item:first-child {
   padding-right: 4px;
   padding-left: 0;
@@ -21910,11 +21930,19 @@ span.ant-radio + * {
 .ant-steps-with-progress .ant-steps-item {
   padding-top: 4px;
 }
-.ant-steps-with-progress .ant-steps-item .ant-steps-item-tail {
-  top: 4px !important;
+.ant-steps-with-progress .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
+  top: 4px;
+  left: 19px;
 }
-.ant-steps-with-progress.ant-steps-horizontal .ant-steps-item:first-child {
+.ant-steps-with-progress.ant-steps-horizontal .ant-steps-item:first-child,
+.ant-steps-with-progress.ant-steps-small.ant-steps-horizontal .ant-steps-item:first-child {
   padding-bottom: 4px;
+  padding-left: 4px;
+}
+.ant-steps-with-progress.ant-steps-small > .ant-steps-item > .ant-steps-item-container > .ant-steps-item-tail {
+  left: 15px;
+}
+.ant-steps-with-progress.ant-steps-vertical .ant-steps-item {
   padding-left: 4px;
 }
 .ant-steps-with-progress.ant-steps-label-vertical .ant-steps-item .ant-steps-item-tail {
