--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -19,6 +19,19 @@ html, body {
     font-size:13px !important;
 }
 
+.font-size-16 {
+    font-size:16px !important;
+}
+
+.font-size-18 {
+    font-size:18px !important;
+}
+
+.font-size-24 {
+    font-size:24px !important;
+}
+
+
 .text-main {
     color: var(--main-color-one) !important;
 }
