--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1713,7 +1713,8 @@ ul {
     padding: 0;
     background: #ffffff;
     width: 100%;
-    box-shadow: 0px 3px 15px rgba(166, 166, 166, 0.1);
+
+
     -webkit-transition: all .4s;
     -o-transition: all .4s;
     transition: all .4s;
@@ -1725,6 +1726,11 @@ ul {
     -webkit-box-shadow: 0px 4px 6px 0px rgba(12, 0, 46, 0.06);
     box-shadow: 0px 4px 6px 0px rgba(12, 0, 46, 0.06);
     background: #fff;
+}
+
+nav.navbar-area {
+
+    box-shadow: 0px 3px 15px rgba(166, 166, 166, 0.1);
 }
 
 .navbar-area .nav-container {
@@ -5348,6 +5354,10 @@ h1.blog_title {
 
 
 /*Antd overrrides*/
+
+.ant-popover-content p {
+    margin: 0;
+}
 
 .ant-tabs-tab {
     padding: 0px 30px !important;
