Updated api pages

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -259,14 +259,14 @@ html, body {
     display: flex;
     align-content: center;
     align-items: center;
-    border-radius: 25px 0px 0px 25px;
-    padding: 0px 15px 0px 0px;
-    background: #fff;
-    position: absolute;
+    border-radius: 25px 0px 0px 25px !important;
+    padding: 0px 15px 0px 0px !important;
+    background: #fff !important;
     top: 15px;
     right: 15px;
     z-index: 99;
-    opacity: 0
+    opacity: 1;
+    position: absolute !important;
 }
 
 .map-container-opened .map-pencil {
@@ -283,12 +283,14 @@ html, body {
 
 .estates-map .toggle-map {
     position: absolute;
-    top: calc(100vh - 70%);
+    top: 250px;
     width: 50px;
     right: 0px;
     z-index: 99;
     background: #fff !important;
-    border: 0 !important;
+    border: 1px solid #E7E7E7 !important;
+    align-items: center;
+    display: flex;
 }
 
 .map-container-opened .toggle-map {
